manifests/webhook_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-server
  labels:
    app: webhook-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-server
  template:
    metadata:
      labels:
        app: webhook-server
    spec:
      serviceAccountName: controller-manager
      containers:
        - name: webhook-server
          image: tca-dev-test-docker-local.artifactory.eng.vmware.com/webhook-server:v1.1.4
          imagePullPolicy: Always
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: tls-certs
              mountPath: /etc/certs
              readOnly: true
      volumes:
        - name: tls-certs
          secret:
            secretName: webhook-server-tls
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-server
spec:
  selector:
    app: webhook-server
  ports:
    - port: 443
      targetPort: 8443
