manifests/webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: cluster-compliance
webhooks:
  - name: "deployment.mutation.svc"
    rules:
      - operations: ["CREATE"]
        apiGroups: [ "apps" ]
        apiVersions: [ "v1" ]
        resources: [ "*" ]
        scope: "Namespaced"
    clientConfig:
      service:
        namespace: kube-system
        name: webhook-server
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURSekNDQWkrZ0F3SUJBZ0lVSGs1L2pHelM2TVk1YmZITEtSeGNPWk5FOVlvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0tURW5NQ1VHQTFVRUF3d2VkMlZpYUc5dmF5MXpaWEoyWlhJdWEzVmlaUzF6ZVhOMFpXMHVjM1pqTUI0WApEVEkwTURjeE5USXhNamd3TVZvWERUSTBNRGd4TkRJeE1qZ3dNVm93S1RFbk1DVUdBMVVFQXd3ZWQyVmlhRzl2CmF5MXpaWEoyWlhJdWEzVmlaUzF6ZVhOMFpXMHVjM1pqTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEEKTUlJQkNnS0NBUUVBbnVWaEcyYzBSUldZWmlETy92SDVzZ2E5MXcyM0VWL0xTZzNGNC82RDEvN0x6R0h4WG9NYQpQVms1NWZQM2lM [...]
    admissionReviewVersions: ["v1"]
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
